tests/ui/last_if_else.stderr
error: `if` and `else` have incompatible types
   --> last_if_else.ina:5:9
    |
 LL |         if true { 50 } else { 20. }
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `i64`, found `f32`

error: `if` and `else` have incompatible types
   --> last_if_else.ina:4:13
    |
 LL |     let a = if true {
 ...| 
 LL |     };
    | 

